--- a/desafios-java/abstracao-bootcamp/nbproject/project.properties
+++ b/desafios-java/abstracao-bootcamp/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=abstracao-bootcamp
-main.class=
+main.class=com.dio.desafio.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
