doc: Criação do readme

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /desafios-java/banco-digital/nbproject/private/
 /desafios-java/banco-digital/build/
 /desafios-java/banco-digital/dist/
+/desafios-java/abstracao-bootcamp/nbproject/private/
+/desafios-java/abstracao-bootcamp/build/
+/desafios-java/abstracao-bootcamp/dist/
