--- a/desafios-kotlin/credit-application-system/src/main/resources/application.yml
+++ b/desafios-kotlin/credit-application-system/src/main/resources/application.yml
@@ -15,4 +15,8 @@ spring:
       settings:
         trace: false
         web-allow-others: false
-
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+  api-docs:
+    path: /api-docs
